fixed menu on mobile, fixed stiky

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,19 +14,26 @@ header{
 	padding: 5px 0;
 	background-color: #fff;
 	z-index: 2;
+	max-height: 100%;
+    overflow: auto;
 	.fa-bars{
 		font-size: 30px;
 	    padding: 10px;
 	    color: #f68b1f !important;
 	    cursor: pointer;
 	    display: none;
-	    @media (max-width: 900px ){
+	    
+	    @media (max-width: 990px ){
 	    	display: block;
 	    }
 	}
 	.wrapper{
-		@media (max-width: 900px ){
+		@media (min-width: 992px ){
+	    	padding: 0 20px;
+	    }
+		@media (max-width: 991px ){
 			padding: 0;
+			text-align: center;
 		}
 	}
 	.btns{
@@ -37,6 +44,9 @@ header{
 	max-width: 50px;
 	float: left;
 	padding: 0;
+	@media (max-width: 990px ){
+		float: none;
+	}
 }
 
  .logo-text{
@@ -50,116 +60,67 @@ header{
     margin-right: 25px;
     float: left;
     padding: 0;
- }
- .Jnav{
- 	@media (max-width: 900px ){
- 		display: none;
- 		position: absolute;
-	    background: white;
-	    width: 100%;
-	    left: 0;
-	    top: 60px;
- 	}
- }
-
-nav{
-	float: left;
-	@media (max-width: 900px ){
+    @media (max-width: 990px ){
 		float: none;
 	}
-	ul{
-		list-style: none;
-		margin: 0;
-		padding: 0;
-		li{
-			display: inline-block;
-		    padding: 0px 15px;
-		    color: #474747;
+ }
+ .sub-arrow{
+ 	display: none;
+ }
+ .sm-simple ul > li {
+    border-top: 0;
+    padding: 0 25px 0 0;
+    @media (max-width: 990px){
+    	padding: 0 !important;
+    }
+}
+ .sm-simple{
+ 	box-shadow: none;
+ 	border: none;
+ 	float: left;
+ 	@media (max-width: 990px){
+ 		float: none;
+ 	}
+ 	li{
+ 		border-left: none;
+ 		a{
+ 			color: #474747 !important;
 		    font-family: "Montserrat",sans-serif;
 		    font-size: 15px;
 		    letter-spacing: -1.5px;
-		    line-height: 50px;
-		    text-transform: uppercase;
-		    @media (max-width: 900px ){
-		    	width: 100%;
-			    text-align: center;
-			    border-bottom: 1px solid #ccc;
-		    }
-		    a{
-		    	color: #474747;
-		    	&:hover{
-			    	color: #f68b1f !important;
-			    	text-decoration: none;
-			    }
-		    }
-		    ul{
-		    	position: absolute;
-		    	background-color: #FFF;
-		    	padding: 10px; 
-		    	min-width: 160px;
-		    	display: none;
-		    	li{
-		    		display: block;
-		    		padding: 0;
-		    		text-transform: capitalize;
-		    		line-height: 30px;
-		    	}
-		    }
-		    &:hover{
-		    	ul{
-		    		display: block;
-		    	}
-		    	.mega-menu-content{
-		    		display: block;
-		    	}
-		    }
-		    i{
-		    	margin-left: 5px;
-		    }
-		}
-	}
+		    line-height: 3;
+		    padding: 0 25px;
+ 		}
+ 	}
+ }
+ .sm-simple ul {
+ 	border: none;
+ 	box-shadow: none;
+ }
+.sm-simple a.has-submenu {
+    padding-right: 0px !important;
 }
-.mega-menu-content{
-	position: absolute;
-	background-color: #fff;
-	padding: 15px; 
-	display: none;
-	transition: all 1s linear;
-	h1{
-		font-size: 15px;
-	}
-	ul{
-		position: relative;
-		&:first-child{
-			border-right: 1px solid #eee;
-		}
-		li{
-			display: block;
-			text-transform: capitalize;
-			line-height: 30px;
-		}
-	}
-	.separator-menu{
-		border-bottom:1px solid #ccc; 
-		width:160px; 
-		margin:0 auto; 
-		overflow-y:auto;
-	}
-	.row{
-		&>div{
-			&:first-child{
-				 border-right: 1px solid #ccc;
-	    		padding-right: 15px;
-			}
-		}
-	}
-	
+ .sm-simple a:hover, .sm-simple a:focus, .sm-simple a:active, .sm-simple a.highlighted {
+    background: none;
+    color: #f68b1f !important;
+    font-family: "Montserrat",sans-serif;
+    font-size: 15px;
+    letter-spacing: -1.5px;
+    line-height: 3;
+    padding: 0 25px;
 }
+
 .btns{
-	@media (max-width: 900px ){
+	@media (max-width: 990px ){
 		float: none !important;
 	    text-align: center;
 	    padding: 20px 0 10px;
+	    display: none;
+	}
+}
+#main-nav{
+	@media (max-width: 990px ){
+		display:none;
 	}
 }
 
